<resources>
    <string name="app_name">PointBrew</string>
    
    <!-- Login Screen -->
    <string name="get_started">Get Started now</string>
    <string name="login_subtitle">Create an account or log in to explore about our app</string>
    <string name="signup_subtitle">Please fill in all fields to create your account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="app_logo">App Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    
    <!-- 
    Note: The string "default_web_client_id" will be automatically generated 
    by the google-services plugin from the google-services.json file.
    If it's not available at compile time, this is normal.
    -->
    
    <!-- Placeholder for Firebase Google Auth (will be auto-generated) -->
    <string name="default_web_client_id" translatable="false">682850487944-rsfpcp82ml7lc2rivaqmev5cp7ndli8t.apps.googleusercontent.com</string>
</resources>